# gcli

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
gcli/: __init__.py  main.py
gcli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
